apps/dispatcharr/overlays/prod/deployment-celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcharr-celery
  labels:
    app.kubernetes.io/instance: dispatcharr-celery
    app.kubernetes.io/name: dispatcharr-celery
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: dispatcharr-celery
      app.kubernetes.io/name: dispatcharr-celery
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dispatcharr-celery
        app.kubernetes.io/name: dispatcharr-celery
    spec:
      nodeSelector:
        kubernetes.io/arch: "amd64"
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: dispatcharr
                  app.kubernetes.io/name: dispatcharr
              topologyKey: kubernetes.io/hostname
      containers:
        - name: celery
          image: ghcr.io/dispatcharr/dispatcharr:0.27.2
          command: ["/app/docker/entrypoint.celery.sh"]
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: 750m
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dispatcharr-data
