apps/dispatcharr/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: dispatcharr
    app.kubernetes.io/name: dispatcharr
  name: dispatcharr
  namespace: media
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: dispatcharr
      app.kubernetes.io/name: dispatcharr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dispatcharr
        app.kubernetes.io/name: dispatcharr
    spec:
      nodeSelector:
        kubernetes.io/arch: "amd64"
      containers:
        - name: dispatcharr
          image: ghcr.io/dispatcharr/dispatcharr:0.28.2@sha256:3eb0ec779f3437ec64c08a9b3f545a355a8f512f3740cdeaac42b80f1021637d
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              gpu.intel.com/i915: "1"
              cpu: 500m
              memory: 1Gi
            limits:
              gpu.intel.com/i915: "1"
              cpu: 1000m
              memory: 2Gi
          ports:
            - containerPort: 9191
              name: main
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
          readinessProbe:
            httpGet:
              path: /api/core/version/
              port: main
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/core/version/
              port: main
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
        - name: celery
          image: ghcr.io/dispatcharr/dispatcharr:0.28.2@sha256:3eb0ec779f3437ec64c08a9b3f545a355a8f512f3740cdeaac42b80f1021637d
          command: ["/app/docker/entrypoint.celery.sh"]
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 1Gi
              cpu: 500m
            limits:
              memory: 2Gi
              cpu: 750m
          livenessProbe:
            exec:
              command: ["celery", "-A", "dispatcharr", "inspect", "ping"]
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 4
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        supplementalGroups:
          - 105 # Add render group.
          - 44
          - 107
          - 568
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dispatcharr-data
